maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:37: error: method keepHandOnSideWall has return statement; needs result type
    return etat
    ^